# qtinterfaceframework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  dependencies.yaml  qt_cmdline.cmake  sync.profile
examples/: .qmake.conf  CMakeLists.txt  examples.pro
examples/ifmedia/: CMakeLists.txt
examples/ifmedia/mediaplayer/: CMakeLists.txt  main.qml
examples/ifmedia/tuner/: CMakeLists.txt  main.cpp  main.qml  tuner.pro
examples/ifvehiclefunctions/: CMakeLists.txt  ifvehiclefunctions.pro
examples/ifvehiclefunctions/climate-qml/: CMakeLists.txt  main.qml
examples/ifvehiclefunctions/climate-widget/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/ifvehiclefunctions/climate_widget/: CMakeLists.txt
examples/ifvehiclefunctions/window-qml/: CMakeLists.txt  WindowItem.qml  main.qml  window-qml.pro
examples/ifvehiclefunctions/window_qml/: WindowItem.qml  main.qml
examples/interfaceframework/: CMakeLists.txt  interfaceframework.pro
examples/interfaceframework/addressbook/: CMakeLists.txt  Main.qml  main.cpp
examples/interfaceframework/climate/: CMakeLists.txt  FanSpeedControl.qml  Main.qml  TempControl.qml  example-climate.qface  example-climate.yaml
examples/interfaceframework/qface-addressbook/: CMakeLists.txt  example-addressbook.yaml  qface-addressbook.pro
examples/interfaceframework/qface-climate/: CMakeLists.txt  qface-climate.pro
examples/interfaceframework/qface-if-addressbook/: example-if-addressbook.qface
examples/interfaceframework/qface-if-climate/: CMakeLists.txt  qface-if-climate.pro
examples/interfaceframework/qface-if-remote/: qface-if-remote.pro
examples/interfaceframework/qface-remote/: CMakeLists.txt  qface-remote.pro
examples/interfaceframework/qface-tutorial/: CMakeLists.txt  qface-tutorial.pro
examples/interfaceframework/remote/: CMakeLists.txt  example-remote.qface
examples/ivicore/: CMakeLists.txt
examples/ivicore/qface-ivi-addressbook/: CMakeLists.txt  qface-ivi-addressbook.pro
examples/ivicore/qface-ivi-climate/: example-ivi-climate.qface  example-ivi-climate.yaml
examples/ivicore/qface-ivi-remote/: CMakeLists.txt  example-ivi-remote.qface
examples/ivimedia/mediaplayer/: CMakeLists.txt  main.cpp  mediaplayer.pro
examples/ivimedia/tuner/: CMakeLists.txt
examples/ivivehiclefunctions/climate_qml/: CMakeLists.txt  climate_qml.pro  main.qml
examples/ivivehiclefunctions/climate_widget/: climate_widget.pro  main.cpp  mainwindow.cpp
examples/ivivehiclefunctions/window_qml/: CMakeLists.txt  WindowItem.qml
src/: CMakeLists.txt
src/helper/: CMakeLists.txt
src/helper/remoteobjects/: CMakeLists.txt  qifpagingmodel.rep  qifpagingmodelqtroadapter.cpp  qifpagingmodelqtroadapter.h  qifpagingmodelqtroadapter_p.h  qifremoteobjecthelper.h  qifremoteobjectpendingresult.cpp  qifremoteobjectreplicahelper.cpp  qifremoteobjectreplicahelper.h  qifremoteobjectsconfig.cpp  qifremoteobjectsconfig.h  qifremoteobjectshelper.cpp  qifremoteobjectshelper.h  qifremoteobjectsourcehelper.h  qifremoteobjectspendingresult.cpp  qifremoteobjectspendingresult.h  qifremoteobjectspendingresult_p.h  qifremoteobjectsreplicahelper.cpp  qivipagingmodel.rep  (+9 more)
src/ifmedia/: CMakeLists.txt  configure.cmake  qifamfmtuner.cpp  qifamfmtuner.h  qifamfmtuner_p.h  qifamfmtunerbackendinterface.cpp  qifamfmtunerbackendinterface.h  qifmediadevice.cpp  qifmediadevice.h  qifmediadevicediscoverymodel.cpp  qifmediadevicediscoverymodel.h  qifmediadevicediscoverymodel_p.h  qifmediadevicediscoverymodelbackendinterface.cpp  qifmediadevicediscoverymodelbackendinterface.h  qifmediaindexercontrol.cpp  qifmediaindexercontrol.h  qifmediaindexercontrol_p.h  qifmediaindexercontrolbackendinterface.cpp  qifmediaindexercontrolbackendinterface.h  qifmediaplayer.cpp  qifmediaplayer.h  qifmediaplayer_p.h  qifmediaplayerbackendinterface.cpp  qifmediaplayerbackendinterface.h  qifplayableitem.cpp  qifplayableitem.h  qifplayqueue.cpp  qifplayqueue.h  qifplayqueue_p.h  qiftunerstation.cpp  qiftunerstation.h  qtifmediaglobal.h  qtifmediaglobal_p.h
src/ifvehiclefunctions/: CMakeLists.txt  configure.json  ifvehiclefunctions.qface  ifvehiclefunctions.yaml
src/imports/: CMakeLists.gen.txt  CMakeLists.txt
src/interfaceframework/: CMakeLists.txt  Qt6InterfaceFrameworkMacros.cmake  configure.cmake  configure.json  qifabstractfeature.cpp  qifabstractfeature.h  qifabstractfeature_p.h  qifabstractfeaturelistmodel.cpp  qifabstractfeaturelistmodel.h  qifabstractfeaturelistmodel_p.h  qifabstractzonedfeature.cpp  qifabstractzonedfeature.h  qifabstractzonedfeature_p.h  qifconfiguration.cpp  qifconfiguration.h  qifconfiguration_p.h  qifdefaultpropertyoverrider.cpp  qifdefaultpropertyoverrider_p.h  qiffeatureinterface.cpp  qiffeatureinterface.h  qiffilterandbrowsemodel.cpp  qiffilterandbrowsemodel.h  qiffilterandbrowsemodel_p.h  qiffilterandbrowsemodelinterface.cpp  qiffilterandbrowsemodelinterface.h  qifpagingmodel.cpp  qifpagingmodel.h  qifpagingmodel_p.h  qifpagingmodelinterface.cpp  qifpagingmodelinterface.h  qifpendingreply.cpp  qifpendingreply.h  qifpendingreply_p.h  qifproxyserviceobject.cpp  qifproxyserviceobject.h  qifproxyserviceobject_p.h  qifqmlconversion_helper.cpp  qifqmlconversion_helper.h  qifserviceinterface.cpp  qifserviceinterface.h  (+20 more)
src/ivicore/: CMakeLists.txt  Qt6IviCoreConfigExtras.cmake.in  qiviabstractfeature.cpp  qiviabstractfeature.h  qiviabstractfeaturelistmodel.h  qiviabstractfeaturelistmodel_p.h  qiviabstractzonedfeature.cpp  qivifeatureinterface.h  qivipagingmodel.cpp  qiviproxyserviceobject.h  qiviqmlconversion_helper.cpp  qivisearchandbrowsemodel.cpp  qivisearchandbrowsemodel.h  qiviserviceinterface.cpp  qivisimulationengine.cpp  qivistandarditem.h  qivizonedfeatureinterface.cpp  qivizonedfeatureinterface.h  qtivicoremodule.h
src/ivimedia/: CMakeLists.txt  configure.json  qivimediadevicediscoverymodel.h  qivimediaplayer.cpp  qivimediaplayer.h  qivimediaplayerbackendinterface.cpp  qiviplayqueue.cpp  qiviplayqueue.h  qivitunerstation.h  qtivimediaglobal_p.h
src/ivivehiclefunctions/: configure.cmake
src/plugins/: CMakeLists.txt
(+883 files in other folders)
