cmake_minimum_required(VERSION 3.16)
project(qface-tutorial LANGUAGES CXX)

find_package(Qt6 REQUIRED COMPONENTS Core Gui InterfaceFramework)

add_subdirectory(instrument-cluster)
add_subdirectory(ch1-basics)
add_subdirectory(ch2-enums-structs)
add_subdirectory(ch3-simulation-backend)
add_subdirectory(ch4-simulation-behavior)
add_subdirectory(ch5-ipc)
if(TARGET Qt::DBus)
    add_subdirectory(ch6-own-backend)
    add_subdirectory(ch7-own-template)
endif()
