add_subdirectory(servicemanagertest)
add_subdirectory(qifabstractfeature)
add_subdirectory(qifconfiguration)
add_subdirectory(qifpendingreply)
add_subdirectory(queryparser)
add_subdirectory(qifpagingmodel)
add_subdirectory(qiffilterandbrowsemodel)
add_subdirectory(qifsimulationengine)
add_subdirectory(qifsimulationglobalobject)
add_subdirectory(legacyqmlregistration)
if(QT_FEATURE_ifcodegen)
    add_subdirectory(ifcodegen)
endif()
